Documentation updates, remove DescriptionItem in DoclingDocument init
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/docs/v2.md
+++ b/docs/v2.md
@@ -92,8 +92,9 @@ doc_converter = (
 **Note**: If you work only with defaults, all remains the same as in Docling v1.
 
 More options are shown in the following example units:
-- [run_with_formats.py](docs/examples/run_with_formats.py)
-- [custom_convert.py](docs/examples/custom_convert.py)
+
+- [run_with_formats.py](../examples/run_with_formats/)
+- [custom_convert.py](../examples/custom_convert/)
 
 ### Converting documents
 
