update RAG examples and banner text
Signed-off-by: Panos Vagenas <35837085+vagenas@users.noreply.github.com>

--- a/docs/examples/rag_llamaindex.ipynb
+++ b/docs/examples/rag_llamaindex.ipynb
@@ -18,6 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> ℹ️ 👉 **The LlamaIndex Docling extension update to Docling v2 is ongoing; in the meanwhile, this notebook is showing current extension output, based on Docling v1.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Overview"
    ]
   },
