--- a/docs/examples/hybrid_rag_qdrant.ipynb
+++ b/docs/examples/hybrid_rag_qdrant.ipynb
@@ -78,10 +78,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from docling.document_converter import DocumentConverter\n",
-    "from docling.datamodel.base_models import InputFormat\n",
     "from docling_core.transforms.chunker import HierarchicalChunker\n",
-    "from qdrant_client import QdrantClient"
+    "from qdrant_client import QdrantClient\n",
+    "\n",
+    "from docling.datamodel.base_models import InputFormat\n",
+    "from docling.document_converter import DocumentConverter"
    ]
   },
   {
