chore: review updates
Signed-off-by: Anush008 <anushshetty90@gmail.com>

--- a/docs/examples/hybrid_rag_qdrant.ipynb
+++ b/docs/examples/hybrid_rag_qdrant.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "%pip install --no-warn-conflicts -q qdrant-client docling fastembed"
+    "%pip install --no-warn-conflicts -q qdrant-client docling docling-core fastembed"
    ]
   },
   {
