Updated test ground-truth (again), bugfix for empty layout
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/tests/data/groundtruth/docling_v1/2203.01017v2.md
+++ b/tests/data/groundtruth/docling_v1/2203.01017v2.md
@@ -17,12 +17,12 @@ The occurrence of tables in documents is ubiquitous. They often summarise quanti
 
 <!-- image -->
 
-## b. Red-annotation of bounding boxes, Blue-predictions by TableFormer
+- b. Red-annotation of bounding boxes, Blue-predictions by TableFormer
 
 
 <!-- image -->
 
-## c. Structure predicted by TableFormer:
+- c. Structure predicted by TableFormer:
 
 Figure 1: Picture of a table with subtle, complex features such as (1) multi-column headers, (2) cell with multi-row text and (3) cells with no content. Image from PubTabNet evaluation set, filename: 'PMC2944238 004 02'.
 <!-- image -->
@@ -217,7 +217,7 @@ Table 4: Results of structure with content retrieved using cell detection on Pub
 
 - a.
 
-Red - PDF cells, Green - predicted bounding boxes, Blue - post-processed predictions matched to PDF cells
+- Red - PDF cells, Green - predicted bounding boxes, Blue - post-processed predictions matched to PDF cells
 
 Japanese language (previously unseen by TableFormer):
 
@@ -420,7 +420,7 @@ where c is one of { left, centroid, right } and x$_{c}$ is the xcoordinate for t
 
 - 5. Use the alignment computed in step 4, to compute the median x -coordinate for all table columns and the me-
 
-9e. If the table cell under the identified row and column is not empty, extend its content with the content of the or-
+- 9e. If the table cell under the identified row and column is not empty, extend its content with the content of the or-
 
 - 9b. Intersect the orphan's bounding box with the row bands, and map the cell to the closest grid row.
 
@@ -440,7 +440,7 @@ phan cell.
 
 Aditional images with examples of TableFormer predictions and post-processing can be found below.
 
-## 
+Figure 8: Example of a table with multi-line header.
 
 Figure 9: Example of a table with big empty distance between cells.
 <!-- image -->
@@ -456,6 +456,8 @@ Figure 12: Simple table predictions and post processing.
 
 Figure 13: Table predictions example on colorful table.
 <!-- image -->
+
+Figure 14: Example with multi-line text.
 
 
 <!-- image -->
