--- a/tests/data/groundtruth/docling_v2/2203.01017v2.md
+++ b/tests/data/groundtruth/docling_v2/2203.01017v2.md
@@ -16,11 +16,11 @@ The occurrence of tables in documents is ubiquitous. They often summarise quanti
 
 <!-- image -->
 
-## b. Red-annotation of bounding boxes, Blue-predictions by TableFormer
+- b. Red-annotation of bounding boxes, Blue-predictions by TableFormer
 
 <!-- image -->
 
-## c. Structure predicted by TableFormer:
+- c. Structure predicted by TableFormer:
 
 Figure 1: Picture of a table with subtle, complex features such as (1) multi-column headers, (2) cell with multi-row text and (3) cells with no content. Image from PubTabNet evaluation set, filename: 'PMC2944238 004 02'.
 
@@ -221,8 +221,7 @@ Table 4: Results of structure with content retrieved using cell detection on Pub
 | TableFormer |     95.4 |           90.1 |  93.6 |
 
 - a.
-
-Red - PDF cells, Green - predicted bounding boxes, Blue - post-processed predictions matched to PDF cells
+- Red - PDF cells, Green - predicted bounding boxes, Blue - post-processed predictions matched to PDF cells
 
 Japanese language (previously unseen by TableFormer):
 
@@ -381,9 +380,7 @@ where c is one of { left, centroid, right } and x$\_{c}$ is the xcoordinate for 
 
 - 9d. Intersect the orphan's bounding box with the column bands, and map the cell to the closest grid column.
 - 5. Use the alignment computed in step 4, to compute the median x -coordinate for all table columns and the me-
-
-9e. If the table cell under the identified row and column is not empty, extend its content with the content of the or-
-
+- 9e. If the table cell under the identified row and column is not empty, extend its content with the content of the or-
 - 9b. Intersect the orphan's bounding box with the row bands, and map the cell to the closest grid row.
 - 9c. Compute the left and right boundary of the vertical band for each grid column (min/max x coordinates per column).
 - 8. In some rare occasions, we have noticed that TableFormer can confuse a single column as two. When the postprocessing steps are applied, this results with two predicted columns pointing to the same PDF column. In such case we must de-duplicate the columns according to highest total column intersection score.
@@ -399,53 +396,19 @@ phan cell.
 
 Aditional images with examples of TableFormer predictions and post-processing can be found below.
 
-##
-
-##
-
-##
-
-##
-
 Figure 8: Example of a table with multi-line header.
-
-##
-
-##
-
-##
-
-##
 
 Figure 9: Example of a table with big empty distance between cells.
 
 <!-- image -->
 
-##
-
-##
-
-##
-
-##
-
 Figure 10: Example of a complex table with empty cells.
 
 <!-- image -->
 
-##
-
 Figure 11: Simple table with different style and empty cells.
 
 <!-- image -->
-
-##
-
-##
-
-##
-
-##
 
 Figure 12: Simple table predictions and post processing.
 
@@ -455,21 +418,11 @@ Figure 13: Table predictions example on colorful table.
 
 <!-- image -->
 
-##
-
-##
-
-##
-
-##
-
 Figure 14: Example with multi-line text.
 
 <!-- image -->
 
 <!-- image -->
-
-##
 
 <!-- image -->
 
@@ -477,13 +430,7 @@ Figure 15: Example with triangular table.
 
 <!-- image -->
 
-##
-
-##
-
 <!-- image -->
-
-##
 
 Figure 16: Example of how post-processing helps to restore mis-aligned bounding boxes prediction artifact.
 
