Futher layout tuning
Signed-off-by: Christoph Auer <cau@zurich.ibm.com>

--- a/tests/data/groundtruth/docling_v1/2203.01017v2.md
+++ b/tests/data/groundtruth/docling_v1/2203.01017v2.md
@@ -219,40 +219,18 @@ Table 4: Results of structure with content retrieved using cell detection on Pub
 
 - Red - PDF cells, Green - predicted bounding boxes, Blue - post-processed predictions matched to PDF cells
 
-Japanese language (previously unseen by TableFormer):
-
-Example table from FinTabNet:
-
-
-<!-- image -->
+Japanese language (previously unseen by TableFormer): Example table from FinTabNet:
 
 b. Structure predicted by TableFormer, with superimposed matched PDF cell text:
+
+Japanese language (previously unseen by TableFormer): Example table from FinTabNet:b. Structure predicted by TableFormer, with superimposed matched PDF cell text:
 <!-- image -->
 
 
-
-|                                                    |             | 論文ファイル   | 論文ファイル   | 参考文献   | 参考文献   |
-|----------------------------------------------------|-------------|----------------|----------------|------------|------------|
-| 出典                                               | ファイル 数 | 英語           | 日本語         | 英語       | 日本語     |
-| Association for Computational Linguistics(ACL2003) | 65          | 65             | 0              | 150        | 0          |
-| Computational Linguistics(COLING2002)              | 140         | 140            | 0              | 150        | 0          |
-| 電気情報通信学会 2003 年総合大会                   | 150         | 8              | 142            | 223        | 147        |
-| 情報処理学会第 65 回全国大会 (2003)                | 177         | 1              | 176            | 150        | 236        |
-| 第 17 回人工知能学会全国大会 (2003)                | 208         | 5              | 203            | 152        | 244        |
-| 自然言語処理研究会第 146 〜 155 回                 | 98          | 2              | 96             | 150        | 232        |
-| WWW から収集した論文                               | 107         | 73             | 34             | 147        | 96         |
-|                                                    | 945         | 294            | 651            | 1122       | 955        |
+<!-- image -->
 
 Text is aligned to match original for ease of viewing
-
-|                          | Shares (in millions)   | Shares (in millions)   | Weighted Average Grant Date Fair Value   | Weighted Average Grant Date Fair Value   |
-|--------------------------|------------------------|------------------------|------------------------------------------|------------------------------------------|
-|                          | RS U s                 | PSUs                   | RSUs                                     | PSUs                                     |
-| Nonvested on Janua ry 1  | 1. 1                   | 0.3                    | 90.10 $                                  | $ 91.19                                  |
-| Granted                  | 0. 5                   | 0.1                    | 117.44                                   | 122.41                                   |
-| Vested                   | (0. 5 )                | (0.1)                  | 87.08                                    | 81.14                                    |
-| Canceled or forfeited    | (0. 1 )                | -                      | 102.01                                   | 92.18                                    |
-| Nonvested on December 31 | 1.0                    | 0.3                    | 104.85 $                                 | $ 104.51                                 |
+<!-- image -->
 
 Figure 5: One of the benefits of TableFormer is that it is language agnostic, as an example, the left part of the illustration demonstrates TableFormer predictions on previously unseen language (Japanese). Additionally, we see that TableFormer is robust to variability in style and content, right side of the illustration shows the example of the TableFormer prediction from the FinTabNet dataset.
 <!-- image -->
@@ -458,6 +436,7 @@ Figure 13: Table predictions example on colorful table.
 <!-- image -->
 
 Figure 14: Example with multi-line text.
+<!-- image -->
 
 
 <!-- image -->
@@ -469,6 +448,9 @@ Figure 14: Example with multi-line text.
 <!-- image -->
 
 Figure 15: Example with triangular table.
+<!-- image -->
+
+
 <!-- image -->
 
 
