--- a/tests/data/groundtruth/docling_v2/2206.01062.md
+++ b/tests/data/groundtruth/docling_v2/2206.01062.md
@@ -6,9 +6,9 @@ Christoph Auer IBM Research Rueschlikon, Switzerland cau@zurich.ibm.com
 
 Michele Dolfi IBM Research Rueschlikon, Switzerland dol@zurich.ibm.com
 
-Ahmed S. Nassar IBM Research Rueschlikon, Switzerland ahn@zurich.ibm.com
+Ahmed S. Nassar IBM Research Rueschlikon, Switzerland
 
-Peter Staar IBM Research Rueschlikon, Switzerland taa@zurich.ibm.com
+ahn@zurich.ibm.com
 
 ## ABSTRACT
 
@@ -20,13 +20,11 @@ Accurate document layout analysis is a key requirement for highquality PDF docum
 
 Permission to make digital or hard copies of part or all of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. Copyrights for third-party components of this work must be honored. For all other uses, contact the owner/author(s).
 
-KDD '22, August 14-18, 2022, Washington, DC, USA
-
-© 2022 Copyright held by the owner/author(s).
-
-ACM ISBN 978-1-4503-9385-0/22/08.
+KDD '22, August 14-18, 2022, Washington, DC, USA © 2022 Copyright held by the owner/author(s). ACM ISBN 978-1-4503-9385-0/22/08.
 
 https://doi.org/10.1145/3534678.3539043
+
+Peter Staar IBM Research Rueschlikon, Switzerland taa@zurich.ibm.com
 
 Figure 1: Four examples of complex page layouts across different document categories
 
